<resources>
    <string name="app_name">TuVeterinario</string>
    <string name="home_welcome_text">Bienvenido a TuVeterinario</string>
    <string name="home_login">Inicia Sesión</string>
    <string name="home_register">Regístrate</string>
    <string name="title_activity_login">Iniciar Sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">correo</string>
    <string name="prompt_password">contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="error_invalid_email">Esta dirección de correo es inválida</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_remember_password">¿has olvidado tu contraseña?</string>
    <string name="login_register_prompt">¿aún no estás registrado? Regístrate</string>
    <string name="login_main_title">Accede a TuVeterinario</string>
    <string name="registro_title">Regístrate para usar TuVeterinario</string>
    <string name="registro_fullname">Nombre completo</string>
    <string name="registroEmail">Correo</string>
    <string name="registroCedula">Cédula</string>
    <string name="registroTelefono">Teléfono / celular</string>
    <string name="registroCiudad">Ciudad</string>
    <string name="registroDireccion">Dirección</string>
    <string name="registroBtnRegistrate">Regístrate</string>
    <string name="registroLinkLogin">¿ya tienes cuenta? Inicia Sesión</string>
    <string name="registroConfirmacionMainTitle">Bienvenido a la comunidad TuVeterinario!</string>
    <string name="registroConfirmacionText">Gracias por registrarte. Para completar el proceso no olvides hacer clic en el link del correo que te enviamos para confirmar tu cuenta.</string>
    <string name="registroConfirmacionBtnContinuar">Continuar</string>
    <string name="serviciosMainTitle">TuVeterinario</string>
    <string name="serviciosBtnVeterinarioOnline">Veterinario Online</string>
    <string name="serviciosBtnVeterinariosYClinicas">Veterinario y Clínicas cerca de ti</string>
    <string name="serviciosBtnServiciosPremium">Servicios Premium</string>
    <string name="consultaOnline1Titulo">Consulta con Veterinario Online</string>
    <string name="consultaOnline1Pregunta">¿cómo se llama tu mascota?</string>
    <string name="consultaOnline1Boton">Siguiente</string>
</resources>
