<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.poli.tuveterinario.RegistroActivity">

    <TextView
        android:id="@+id/registroTxtMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="52dp"
        android:text="@string/registro_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/registroImgMainImage"
        android:layout_width="53dp"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registroTxtMainTitle"
        app:srcCompat="@mipmap/ic_launcher" />

    <ScrollView
        android:id="@+id/registroFormulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registroImgMainImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/registroNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/registro_fullname" />

            <EditText
                android:id="@+id/registroCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/registroEmail" />

            <EditText
                android:id="@+id/registroCedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/registroCedula" />

            <EditText
                android:id="@+id/registroTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/registroTelefono" />

            <AutoCompleteTextView
                android:id="@+id/registroCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registroCiudad" />

            <EditText
                android:id="@+id/registroDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/registroDireccion" />

            <Button
                android:id="@+id/registroBtnRegistrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registroBtnRegistrate" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/registroLinkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registroLinkLogin"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/registroFormulario"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
